--- a/js/manifest.json
+++ b/js/manifest.json
@@ -3,7 +3,7 @@
       "short_name": "Playable AD",
       "description": "Playable AD",
       "lang": "en-GB",
-      "start_url": "./",
+      "start_url": "../index.html",
       "display": "standalone",
       "theme_color": "#E6E6FA",
       "background_color": "#E6E6FA",
